# ProjectX

./: CMakeLists.txt  README.md  main.cpp
src/: calculator.cpp  calculator.h
